@@ -416,7 +416,7 @@ word to be added to reserved words list
 \fB\-freserved=\fR<word>:<alias> word to be added to reserved words list as alias
 .SH AUTHOR
 Written by Keisuke Nishida, Roger While, Ron Norman, Simon Sobisch, Edward Hart
-Built     Oct 11 2016 09:36:15
+Built     Oct 12 2016 08:50:08
 Packaged  Oct 25 2015 21:40:28 UTC
 C version "4.8.3 20140911 (Red Hat 4.8.3\-7)"
 .SH "REPORTING BUGS"
